# MS-Learn-Catalog-YP

./: .gitignore  README.md  README_SETUP.md  pyproject.toml
